# ukmm

./: CHANGELOG.md  Cargo.toml  build.rs
crates/uk-content/: Cargo.toml
crates/uk-content-derive/: Cargo.toml
crates/uk-content-derive/src/: lib.rs
crates/uk-content/examples/: dump_recipe.rs
crates/uk-content/src/: constants.rs  lib.rs  resource.rs
crates/uk-content/src/actor/: info.rs  prelude.rs  residents.rs
crates/uk-content/src/chemical/: chmres.rs
crates/uk-content/src/cooking/: data.rs  recipe.rs  single_recipe.rs  system.rs
crates/uk-content/src/data/: gamedata.rs  savedata.rs  shop.rs
crates/uk-content/src/eco/: areadata.rs  level.rs  status.rs
crates/uk-content/src/event/: info.rs  residents.rs
crates/uk-content/src/font/: mod.rs
crates/uk-content/src/layout/: mod.rs
crates/uk-content/src/map/: lazy.rs  static_.rs  unit.rs
crates/uk-content/src/message/: mod.rs
crates/uk-content/src/quest/: product.rs
crates/uk-manager/: Cargo.toml
crates/uk-manager/src/: bnp.rs  deploy.rs  localization.rs  mods.rs  settings.rs  util.rs
crates/uk-mod/: Cargo.toml
crates/uk-mod/src/: lib.rs  pack.rs  unpack.rs
crates/uk-reader/: Cargo.toml
crates/uk-reader/src/: lib.rs  unpacked.rs  zarchive.rs
crates/uk-ui/: Cargo.toml
crates/uk-ui/src/: ext.rs  icons.rs  lib.rs  paths.rs  syntect.rs  visuals.rs
src/: cli.rs  gui.rs  logger.rs
src/gui/: deploy.rs  info.rs  menus.rs  modals.rs  mods.rs  options.rs  package.rs  picker.rs  profiles.rs  settings.rs  tabs.rs  tasks.rs  update.rs  util.rs
src/gui/tasks/: handlers.rs
(+51 files in other folders)
